# khronos

./: .gitignore  .gitmodules  .luaurc  Cargo.toml  Makefile  README.md  a.luau  createdocs.luau  delayqueuetest.luau  docs.md  kvparser.ts  perf.data.old  test.luau  testrequire.luau
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cli.rs  constants.rs  dispatch.rs  experiments.rs  http_binder.rs  main.rs  repl_completer.rs  testfuncs.rs  tui_entrypoint.rs
crates/cli/src/cli_extensions/: ext.rs  http.rs  http_client.rs  http_server.rs  mod.rs
crates/cli/src/experiments/: image_classification.rs  mod.rs
crates/cli/src/filestorage/: mod.rs
crates/cli/src/presets/: defaults.rs  impls.rs  mod.rs  types.rs
crates/cli/src/provider/: mod.rs
crates/cli/src/tui/: app.rs  events.rs  mod.rs  theme.rs  ui.rs
crates/cli/src/tui/widgets/: about_modal.rs  dashboard.rs  help_modal.rs  mod.rs  output_panel.rs  quit_modal.rs  repl_input.rs  status_bar.rs  theme_switcher.rs
crates/dapi/: Cargo.toml  README.md  variants.json
crates/dapi/src/: antiraid_check_channel_permissions.rs  antiraid_check_permissions.rs  antiraid_get_fused_member.rs  apilist.rs  context.rs  controller.rs  ensure_safe.rs  id.rs  lib.rs  multioption.rs  permissions.rs  serenity_backports.rs  validator.rs
crates/dapi/src/api/: mod.rs
crates/dapi/src/api/auditlogs/: mod.rs
crates/dapi/src/api/automoderation/: create_auto_moderation_rule.rs  delete_auto_moderation_rule.rs  edit_auto_moderation_rule.rs  get_auto_moderation_rule.rs  list_auto_moderation_rules.rs  mod.rs
crates/dapi/src/api/channels/: create_channel_invite.rs  delete_channel.rs  delete_channel_permission.rs  edit_channel.rs  edit_channel_permissions.rs  get_channel.rs  mod.rs
crates/dapi/src/api/commands/: create_guild_command.rs  create_guild_commands.rs  get_guild_command.rs  get_guild_commands.rs  mod.rs
crates/dapi/src/api/guilds/: add_guild_member_role.rs  create_guild_ban.rs  create_guild_channel.rs  create_guild_role.rs  delete_guild_role.rs  get_guild.rs  get_guild_ban.rs  get_guild_bans.rs  get_guild_channels.rs  get_guild_member.rs  get_guild_preview.rs  get_guild_role.rs  get_guild_roles.rs  list_active_guild_threads.rs  list_guild_members.rs  mod.rs  modify_guild.rs  modify_guild_channel_positions.rs  modify_guild_member.rs  modify_guild_role.rs  modify_guild_role_positions.rs  remove_guild_ban.rs  remove_guild_member.rs  remove_guild_member_role.rs  search_guild_members.rs
crates/dapi/src/api/interactions/: create_followup_message.rs  create_interaction_response.rs  delete_followup_message.rs  delete_original_interaction_response.rs  edit_followup_message.rs  edit_original_interaction_response.rs  get_followup_message.rs  get_original_interaction_response.rs  mod.rs
crates/dapi/src/api/invites/: delete_invite.rs  get_invite.rs  mod.rs
crates/dapi/src/api/messages/: bulk_delete_messages.rs  create_message.rs  create_reaction.rs  crosspost_message.rs  delete_all_reactions.rs  delete_all_reactions_for_emoji.rs  delete_message.rs  delete_own_reaction.rs  delete_user_reaction.rs  edit_message.rs  get_channel_message.rs  get_channel_messages.rs  get_reactions.rs  mod.rs
crates/dapi/src/api/reactions/: create_reaction.rs  delete_all_reactions.rs  delete_all_reactions_for_emoji.rs  delete_own_reaction.rs  delete_user_reaction.rs  get_reactions.rs  mod.rs
crates/dapi/src/api/webhooks/: create_webhook.rs  delete_webhook.rs  execute_webhook.rs  get_channel_webhooks.rs  get_guild_webhooks.rs  get_webhook.rs  mod.rs  modify_webhook.rs
crates/dapi/src/dhttp/: error.rs  httpcall.rs  mod.rs  request.rs  routing.rs
crates/dapi/src/types/: allowed_mentions.rs  app_commands.rs  auto_moderation.rs  channels.rs  embed.rs  guilds.rs  interactions.rs  message.rs  mod.rs  poll.rs  reaction.rs  serenity_component.rs  webhook.rs
crates/ext/: Cargo.toml
crates/ext/src/: db.rs  lib.rs
crates/runtime/: Cargo.toml  clippy.toml  test_rx.rs
crates/runtime/src/: lib.rs
crates/runtime/src/core/: channel.rs  datamgmt.rs  datetime.rs  interop.rs  json.rs  kittycat.rs  lazy.rs  luau.rs  mod.rs  permissions.rs  storage.rs  typesext.rs  wasm.rs  yaml.rs
crates/runtime/src/plugins/: mod.rs
crates/runtime/src/plugins/antiraid/: mod.rs
crates/runtime/src/plugins/antiraid/datastores/: mod.rs
crates/runtime/src/plugins/antiraid/datetime/: README.md  mod.rs
crates/runtime/src/plugins/antiraid/discord/: README.md  builders.rs  mod.rs  structs.rs  validators.rs
crates/runtime/src/plugins/antiraid/globalkv/: mod.rs
crates/runtime/src/plugins/antiraid/httpclient/: dns.rs  mod.rs  reqwest_shim.rs
crates/runtime/src/plugins/antiraid/httpserver/: http_binder.rs  mod.rs
crates/runtime/src/plugins/antiraid/img_captcha/: README.md  mod.rs
crates/runtime/src/plugins/antiraid/interop/: README.md
crates/runtime/src/plugins/antiraid/kv/: README.md  mod.rs  types.rs
crates/runtime/src/plugins/lune/: mod.rs  utils.rs
crates/runtime/src/primitives/: README.md  blob.rs  context.rs  event.rs  lazy.rs  mod.rs  opaque.rs  plugin.rs  syscall.rs
crates/runtime/src/require/: asset_requirer.rs  fswrapper.rs  mod.rs  tests.rs  utils.rs  vfs_navigator.rs
crates/runtime/src/rt/: isolate.rs  manager.rs  mod.rs  multidispatcher.rs  runtime.rs
crates/runtime/src/traits/: context.rs  datastoreprovider.rs  discordprovider.rs  eventprovider.rs  globalkvprovider.rs  httpclientprovider.rs  httpserverprovider.rs  kvprovider.rs  lockdownprovider.rs  mod.rs  objectstorageprovider.rs  pageprovider.rs  runtimeprovider.rs  sample.rs  scheduledexecprovider.rs  stingprovider.rs  userinfoprovider.rs
crates/runtime/src/traits/ir/: datastores.rs  globalkv.rs  kv.rs  lockdowns.rs  mod.rs  objectstorage.rs  runtime.rs  scheduled_exec.rs  settings_ir.rs
crates/runtime/src/utils/: assets.rs  dummyfeedback.rs  ensure_safe.rs  executorscope.rs  khronos_value.rs  memoryvfs.rs  mod.rs  pluginholder.rs  pp.rs  prelude.rs  proxyglobal.rs  ratelimits.rs  require.rs  require_v2.rs  serenity_backports.rs  serenity_utils.rs  threadlimitmw.rs
docs/: datamgmt.md  kv.md  (+23 more)
(+109 files in other folders)
