[package]
name = "khronos_cli"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
clap = { version = "4.5.20", features = ["derive", "string"] }
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
rustyline = "15"
dotenvy = { git = "https://github.com/allan2/dotenvy" }
tch = { version = "0.19", features = ["download-libtorch"], optional = true }
termcolor = "1"

# Ratatui TUI dependencies
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"

# Antiraid
khronos_runtime = { path = "../runtime", features = ["repl"] }

[features]
default = []

# Image classification experiments
experiment_image_classification = ["dep:tch"]
