[package]
name = "dapi"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
reqwest = { version = "0.12", features = ["json"] }
percent-encoding = { version = "2" }
extract_map = { version = "0.3", features = ["serde"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
bitflags = { version = "2", features = ["serde"] }
linkify = { git = "https://github.com/robinst/linkify" }
rustrict = "0.7"
regex = "1"
mluau = { git = "https://github.com/mluau/mluau", features = [
    "luau",
    "serialize",
], optional = true }

[features]
default = ["luau"]
luau = ["dep:mluau"]
