[package]
name = "khronos_ext"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
mluau = { git = "https://github.com/mluau/mluau", features = [
    "luau",
    "serialize",
] }
mlua_scheduler = { git = "https://github.com/mluau/scheduler" }
