[package]
name = "khronos_runtime"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
governor = "0.6"
log = "0.4"
extract_map = { version = "0.3", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
tokio = { version = "1" }
arrayvec = "0.7"
small-fixed-array = "0.4"
rustrict = "0.7"
reqwest = { version = "0.12" }
percent-encoding = { version = "2" }
linkify = { git = "https://github.com/robinst/linkify" }
mlua_scheduler = { git = "https://github.com/mluau/scheduler" }
mluau = { git = "https://github.com/mluau/mluau", features = [
    "luau",
    "serialize",
] }
captcha = { git = "https://github.com/Anti-Raid/captcha", branch = "master" }
vfs = { git = "https://github.com/Anti-Raid/rust-vfs" }
bitflags = { version = "2", features = ["serde"] }
rand = { version = "0.9", features = ["std"] }
base64 = "0.22"

# httpclient
hickory-resolver = { version = "0.25", features = ["tokio"] }
pin-project-lite = "0.2"
bytes = "1.2"
futures-core = "0.3"

# httpserver
axum = { version = "0.8", features = ["macros"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
tower = "0.5"

# blob encryption
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = "1"

# storage deps
tar = "0.4"

# @lune/datetime
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
chrono_lc = "0.1"
thiserror = "1.0"
self_cell = "1"

# @lune/regex and discord
regex = "1"

# @lune/serde
async-compression = { version = "0.4", features = [
    "tokio",
    "brotli",
    "deflate",
    "gzip",
    "zlib",
] }
bstr = "1.9"
lz4 = "1.26"
serde_yaml = "0.9"
toml = { version = "0.8", features = ["preserve_order"] }
digest = "0.10.7"
hmac = "0.12.1"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
# This feature MIGHT break due to the unstable nature of the digest crate.
# Check before updating it.
blake3 = { version = "=1.5.0", features = ["traits-preview"] }

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.uuid]
version = "1"
features = ["v4", "fast-rng", "serde"]

[features]
default = []
repl = []