[package]
name = "khronos_runtime"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
governor = "0.6"
log = "0.4"
extract_map = { version = "0.3", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
tokio = { version = "1" }
tokio-util = { version = "0.7", features = ["time"] }
mlua_scheduler = { git = "https://github.com/mluau/scheduler" }
mluau = { git = "https://github.com/mluau/mluau", features = [
    "luau",
    "serialize",
] }
mluau-require = { git = "https://github.com/mluau/mluau-require" }
rand = { version = "0.9", features = ["std"] }
base64 = "0.22"

# dapi
dapi = { path = "../dapi" }

# blob encryption
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = "1"

# storage deps
tar = "0.4"

# antiraid/datetime
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }

# datamgmt
bstr = "1.9" 
async-compression = { version = "0.4", features = [
    "tokio",
    "brotli",
    "gzip",
    "zlib",
] }

[dependencies.serenity]
git = "https://github.com/Anti-Raid/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend", "unstable"]

[dependencies.uuid]
version = "1"
features = ["v4", "fast-rng", "serde"]

[features]
default = []
repl = []
luaufusion = []