[package]
name = "khronos_runtime"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
governor = "0.6"
log = "0.4"
indexmap = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["io-util"] }
tokio-util = { version = "0.7", features = ["time"] }
mlua_scheduler = { git = "https://github.com/mluau/scheduler" }
mluau = { git = "https://github.com/mluau/mluau", features = [
    "luau",
    "serialize",
] }
mluau-require = { git = "https://github.com/mluau/mluau-require" }
rand = { version = "0.9", features = ["std"] }
base64 = "0.22"
futures = "0.3"

# yaml
serde-saphyr = "0.0.25"

# blob encryption
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = "1"

# storage deps
tar = "0.4"

# antiraid/datetime
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }

# antiraid/kittycat
kittycat = { git = "https://github.com/anti-raid/kittycat" }

# datamgmt
bstr = "1.9" 
async-compression = { version = "0.4", features = [
    "tokio",
    "brotli",
    "gzip",
    "zlib",
] }

[features]
default = []
repl = []
luaufusion = []